welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:12: error: not found: value r
  r
  ^occurrences:13: error: not found: value eturn
  eturn compteur
  ^